fix: resolve static analysis / sonar issues
- Extract DateTimeFormatter as static final constant (S1845)
- Replace ResponseEntity<?> wildcard with ResponseEntity<Object> (S1452)
- Replace Collectors.toList() with Stream.toList() throughout (S6204)
- Batch email-sent updates with saveAll() instead of per-entity save() in loop
- Fix stale Javadoc on runAdhocJob (toDateTime is now required, not optional)
- Fix stale comment in toInputValue (format now includes seconds)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>